--- a/app/views/pwa/manifest.json.erb
+++ b/app/views/pwa/manifest.json.erb
@@ -1,22 +1,22 @@
 {
-  "name": "AccessPdfUi",
-  "icons": [
-    {
-      "src": "/icon.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    },
-    {
-      "src": "/icon.png",
-      "type": "image/png",
-      "sizes": "512x512",
-      "purpose": "maskable"
-    }
-  ],
-  "start_url": "/",
-  "display": "standalone",
-  "scope": "/",
-  "description": "AccessPdfUi.",
-  "theme_color": "red",
-  "background_color": "red"
+"name": "AsapPdf",
+"icons": [
+{
+"src": "/icon.png",
+"type": "image/png",
+"sizes": "512x512"
+},
+{
+"src": "/icon.png",
+"type": "image/png",
+"sizes": "512x512",
+"purpose": "maskable"
+}
+],
+"start_url": "/",
+"display": "standalone",
+"scope": "/",
+"description": "AsapPdf.",
+"theme_color": "red",
+"background_color": "red"
 }
