minor ui updates and rake task

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -7,3 +7,15 @@
     @apply text-2xl font-medium text-gray-500 leading-tight text-base-content;
   }
 }
+
+@layer components {
+  .btn {
+    @apply rounded-md;
+  }
+
+  .table-zebra tbody tr:nth-child(even) {
+    --tw-bg-opacity: 0.5;
+    background-color: var(--fallback-b2, oklch(var(--b2) / var(--tw-bg-opacity)));
+    @apply text-2xl font-medium text-gray-500 leading-tight text-base-content;
+  }
+}
