--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -18,4 +18,18 @@
     background-color: var(--fallback-b2, oklch(var(--b2) / var(--tw-bg-opacity)));
     @apply text-2xl font-medium text-gray-500 leading-tight text-base-content;
   }
+
+  .label-text {
+    @apply text-gray-500;
+  }
+
+  .search input {
+    @apply m-0 p-2 text-sm h-10;
+  }
+
+  /* Custom select size between DaisyUI's sm and md */
+  .select-custom {
+    @apply select select-bordered select-sm;
+    @apply m-0 p-2 text-sm h-10;
+  }
 }
