--- a/app/views/layouts/centered.html.erb
+++ b/app/views/layouts/centered.html.erb
@@ -16,7 +16,7 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
   </head>
-  <body data-theme="lofi" class="bg-base-200 min-h-screen flex items-center justify-center">
+  <body data-theme="autumn" class="bg-base-200 min-h-screen flex items-center justify-center">
     <!-- Toast Messages -->
     <div class="fixed top-4 right-4 z-50">
       <% if flash[:notice] %>
