--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -1,13 +1,13 @@
 <div class="py-6">
   <header>
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="px-4 sm:px-6 lg:px-8">
       <div class="flex justify-between items-center">
         <h1 class="text-gray-600">My Sites</h1>
         <button onclick="add_site_modal.showModal()" class="btn btn-primary">Add Site</button>
       </div>
     </div>
   </header>
-  <div class="max-w-7xl mx-auto sm:px-6 lg:px-8">
+  <div class="sm:px-6 lg:px-8">
     <div class="px-4 py-6 sm:px-0">
       <!-- Sites Grid -->
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
