example content for table

--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -92,11 +92,25 @@
                       </a>
                     <% end %>
                   </td>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= document.modification_date&.strftime("%b %d, %Y") %></td>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= document.document_category %></td>
-                  <td class="px-6 py-4 text-sm text-gray-500"><%= document.accessibility_recommendation %></td>
+                  <td class="px-6 py-4 text-sm whitespace-nowrap text-gray-500"><%= document.modification_date&.strftime("%b %d, %Y") %></td>
                   <td class="px-6 py-4 text-sm text-gray-500">
-                    <input>
+                    <span class="text-xs font-normal">
+                      <i class="fas fa-wand-magic-sparkles"></i>
+                    </span>
+                    Staff report, ordinance, resolution, agreement
+                    <%#= document.document_category %>
+                  </td>
+                  <td class="px-6 py-4 text-sm text-gray-500">
+                    <span class="text-xs font-normal">
+                      <i class="fas fa-wand-magic-sparkles"></i>
+                    </span>
+                    Convert to web content
+                    <%#= document.accessibility_recommendation %>
+                  </td>
+                  <td class="px-6 py-4 text-sm text-gray-500">
+                    <p class="min-w-32">
+                      These are notes on this document I should remember to reach out to... @ whatever agency...
+                    </p>
                   </td>
                   <td class="px-6 py-4 text-sm text-gray-500 relative" data-controller="status" data-document-id="<%= document.id %>">
                     <button class="text-gray-500 hover:text-gray-700 z-[50]" data-action="status#toggleMenu">
